# faun

./: .gitignore  BENCHMARKING.md  Cargo.toml  LICENSE  README.md  aos_soa_interop_ascii.md  columnar_persistence_architecture.md  columnar_persistence_implementation.md  columnar_persistence_implementation_summary.md  soa_aos_interop_diagram.md
benches/: performance_benchmark.rs
docs/: CACHE_ANALYSIS.md  PERFORMANCE_SUMMARY.md  architecture_specific_simd_optimization.md
example_app/: Cargo.toml  PERSISTENCE_DEMOS.md  README.md  expanded.rs
example_app/benches/: advanced_optimizations.rs
example_app/src/: lib.rs  main.rs  parquet_demo.rs  persistence.rs  persistent_demo.rs
example_app/src/optimizations/: cache_blocking.rs  direct_access.rs  memory_layout.rs  mod.rs  simd.rs
example_app_advanced/: Cargo.toml  README.md
example_app_advanced/src/: main.rs
examples/: ecommerce_analytics.rs  performance_benchmark.rs
soa_macros/: Cargo.toml
soa_macros/src/: lib.rs
soa_persistence/: Cargo.toml  PARQUET_USAGE.md
soa_persistence/src/: arrow_conversion.rs  arrow_persistence.rs  arrow_schema.rs  errors.rs  lib.rs  parquet_persistence.rs  persistence.rs
soa_runtime/: Cargo.toml
soa_runtime/src/: lib.rs
