
[package]
name = "soa_macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Proc-macro derive(SoA) and derive(SoAStore)."
proc-macro = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
soa_runtime = { path = "../soa_runtime" }
